Fixing resources filters and header text spacing

--- a/src/styles/resources.module.scss
+++ b/src/styles/resources.module.scss
@@ -62,8 +62,10 @@
     margin-top: 1rem;
   }
 
-  > p {
-    margin-top: 1rem;
+  .headerTextSection {
+    p {
+      margin-top: 1rem;
+    }
   }
 
   .resource {
